@@ -26,6 +26,22 @@
  */
 package dk.statsbiblioteket.doms.ingesters.radiotv;
 
+import org.w3c.dom.Document;
+import org.w3c.dom.Node;
+import org.w3c.dom.NodeList;
+import org.xml.sax.ErrorHandler;
+import org.xml.sax.SAXException;
+import org.xml.sax.SAXParseException;
+
+import javax.xml.namespace.NamespaceContext;
+import javax.xml.parsers.DocumentBuilder;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.validation.Schema;
+import javax.xml.xpath.XPath;
+import javax.xml.xpath.XPathConstants;
+import javax.xml.xpath.XPathExpressionException;
+import javax.xml.xpath.XPathFactory;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
@@ -38,23 +54,6 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
-
-import javax.xml.namespace.NamespaceContext;
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
-import javax.xml.parsers.ParserConfigurationException;
-import javax.xml.validation.Schema;
-import javax.xml.xpath.XPath;
-import javax.xml.xpath.XPathConstants;
-import javax.xml.xpath.XPathExpressionException;
-import javax.xml.xpath.XPathFactory;
-
-import org.w3c.dom.Document;
-import org.w3c.dom.Node;
-import org.w3c.dom.NodeList;
-import org.xml.sax.ErrorHandler;
-import org.xml.sax.SAXException;
-import org.xml.sax.SAXParseException;
 
 /**
  * @author &lt;tsh@statsbiblioteket.dk&gt;
@@ -90,8 +89,8 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
     private int exceptionCount = 0;
 
     public RadioTVMetadataProcessor(DOMSLoginInfo domsLoginInfo,
-            File failedFilesFolder, File processedFilesFolder,
-            Schema preIngestFileSchema) {
+                                    File failedFilesFolder, File processedFilesFolder,
+                                    Schema preIngestFileSchema) {
         this.failedFilesFolder = failedFilesFolder;
         this.processedFilesFolder = processedFilesFolder;
         this.preIngestFileSchema = preIngestFileSchema;
@@ -147,15 +146,15 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
                         .getLogin(), domsLoginInfo.getPassword());
 
                 final List<String> filePIDs = ingestFiles(domsClient,
-                        radioTVMetadata);
+                                                          radioTVMetadata);
                 pidsToPublish.addAll(filePIDs);
 
                 final String metaFilePID = ingestMetaFile(domsClient,
-                        radioTVMetadata, filePIDs);
+                                                          radioTVMetadata, filePIDs);
                 pidsToPublish.add(metaFilePID);
 
                 final String programPID = ingestProgram(domsClient,
-                        radioTVMetadata, metaFilePID);
+                                                        radioTVMetadata, metaFilePID);
                 pidsToPublish.add(programPID);
 
                 domsClient.publishObjects(pidsToPublish);
@@ -255,7 +254,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      *             <code>radioTVMetadata</code> XML document.
      */
     private String ingestProgram(DOMSWSClient domsClient,
-            Document radioTVMetadata, String metafilePID)
+                                 Document radioTVMetadata, String metafilePID)
             throws ServerOperationFailed, XPathExpressionException {
 
         final String programObjectPID = domsClient
@@ -308,10 +307,10 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
 
         // Replace the PBCore metadata template with the real data.
         pbCoredDataStreamDocument.replaceChild(newPBCoreElement,
-                pbCoreDataStreamElement);
+                                               pbCoreDataStreamElement);
 
         domsClient.updateDataStream(programObjectPID, PROGRAM_PBCORE_DS_ID,
-                pbCoredDataStreamDocument);
+                                    pbCoredDataStreamDocument);
 
         // Add the Ritzau metadata
         final Node ritzauPreingestElement = (Node) xPath.evaluate(
@@ -326,7 +325,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
                 .getTextContent());
 
         domsClient.updateDataStream(programObjectPID, RITZAU_ORIGINAL_DS_ID,
-                ritzauOriginalDocument);
+                                    ritzauOriginalDocument);
 
         // Add the Gallup metadata
         final Node gallupPreingestElement = (Node) xPath.evaluate(
@@ -341,11 +340,11 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
                 .getTextContent());
 
         domsClient.updateDataStream(programObjectPID, GALLUP_ORIGINAL_DS_ID,
-                gallupOriginalDocument);
+                                    gallupOriginalDocument);
 
         // Create relations to the metafile/shard
         domsClient.addObjectRelation(programObjectPID,
-                HAS_METAFILE_RELATION_TYPE, metafilePID);
+                                     HAS_METAFILE_RELATION_TYPE, metafilePID);
 
         return programObjectPID;
     }
@@ -360,7 +359,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      * which constitutes the contents of the metafile.
      * <p/>
      * TODO: Consider cleaning up/consolidating the exceptions
-     * 
+     *
      * @param domsClient
      *            A reference to the DOMS client instance to communicate with.
      * @param radioTVMetadata
@@ -381,10 +380,10 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      * @throws URISyntaxException
      */
     private String ingestMetaFile(DOMSWSClient domsClient,
-            Document radioTVMetadata, List<String> filePIDs)
+                                  Document radioTVMetadata, List<String> filePIDs)
             throws ServerOperationFailed, IOException, SAXException,
-            ParserConfigurationException, XPathExpressionException,
-            URISyntaxException {
+                   ParserConfigurationException, XPathExpressionException,
+                   URISyntaxException {
 
         // Create a file object from the file object template.
         final String metaFilePID = domsClient.createObjectFromTemplate(META_FILE_TEMPLATE_PID);
@@ -392,12 +391,14 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
         final Date now = new Date();
 
         //TODO: Do something about this.
-        final FileInfo fileInfo = new FileInfo("I_made_this_up/"
-                + now.getTime(), new URL("http://www.statsbiblioteket.dk/doms/shard/" + metaFilePID
-                + now.getTime()), "", new URI("info:pronom/fmt/199"));
+        final FileInfo fileInfo
+                = new FileInfo("shard/" + metaFilePID,
+                               new URL("http://www.statsbiblioteket.dk/doms/shard/" + metaFilePID),
+                               "",
+                               new URI("info:pronom/fmt/199"));
 
         domsClient.addFileToFileObject(metaFilePID, fileInfo);
-        
+
         final Document metadataDataStreamDocument = domsClient.getDataStream(
                 metaFilePID, META_FILE_METADATA_DS_ID);
         final Node metadataDataStreamElement = metadataDataStreamDocument
@@ -406,10 +407,10 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
         final NodeList children = metadataDataStreamElement.getChildNodes();
         if (children.getLength() != 1) {
             throw new SAXException("Expected only one XML element in the "
-                    + "metadata datastream (ID: " + META_FILE_METADATA_DS_ID
-                    + ") of the template object (PID: "
-                    + META_FILE_TEMPLATE_PID + "). Found "
-                    + children.getLength() + " elements.");
+                                   + "metadata datastream (ID: " + META_FILE_METADATA_DS_ID
+                                   + ") of the template object (PID: "
+                                   + META_FILE_TEMPLATE_PID + "). Found "
+                                   + children.getLength() + " elements.");
         }
 
         // Remove the "INSERT" comment/instruction from the template
@@ -436,12 +437,12 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
         }
 
         domsClient.updateDataStream(metaFilePID, META_FILE_METADATA_DS_ID,
-                metadataDataStreamDocument);
+                                    metadataDataStreamDocument);
 
         // Create relations to the relevant file(s)
         for (String filePID : filePIDs) {
             domsClient.addObjectRelation(metaFilePID,
-                    CONSISTS_OF_RELATION_TYPE, filePID);
+                                         CONSISTS_OF_RELATION_TYPE, filePID);
         }
 
         return metaFilePID;
@@ -451,7 +452,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      * Ingest any missing file objects into the DOMS and return a list of PIDs
      * for all the DOMS file objects corresponding to the files listed in the
      * <code>radioTVMetadata</code> document.
-     * 
+     *
      * @param domsClient
      *            Reference to the DOMS client to communicate through.
      * @param radioTVMetadata
@@ -469,8 +470,8 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      *             if the format URI for the file is invalid.
      */
     private List<String> ingestFiles(DOMSWSClient domsClient,
-            Document radioTVMetadata) throws XPathExpressionException,
-            MalformedURLException, ServerOperationFailed, URISyntaxException {
+                                     Document radioTVMetadata) throws XPathExpressionException,
+                                                                      MalformedURLException, ServerOperationFailed, URISyntaxException {
 
         // Get the recording files XML element and process the file information.
         final XPath xPath = this.xPathFactory.newXPath();
@@ -486,7 +487,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
             final Node currentFileNode = recordingFiles.item(nodeIndex);
 
             final Node fileURLNode = (Node) xPath.evaluate(FILE_URL_ELEMENT,
-                    currentFileNode, XPathConstants.NODE);
+                                                           currentFileNode, XPathConstants.NODE);
             final String fileURLString = fileURLNode.getTextContent();
             final URL fileURL = new URL(fileURLString);
 
@@ -498,7 +499,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
                 // Create a new one now.
                 final Node fileNameNode = (Node) xPath
                         .evaluate(FILE_NAME_ELEMENT, currentFileNode,
-                                XPathConstants.NODE);
+                                  XPathConstants.NODE);
 
                 final String fileName = fileNameNode.getTextContent();
 
@@ -509,7 +510,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
                 final URI formatURI = new URI(formatURINode.getTextContent());
 
                 final Node md5SumNode = (Node) xPath.evaluate(MD5_SUM_ELEMENT,
-                        currentFileNode, XPathConstants.NODE);
+                                                              currentFileNode, XPathConstants.NODE);
 
                 // The MD5 check sum is optional. Just leave it empty if the
                 // pre-ingest file does not provide it.
@@ -519,7 +520,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
                 }
 
                 final FileInfo fileInfo = new FileInfo(fileName, fileURL,
-                        md5String, formatURI);
+                                                       md5String, formatURI);
 
                 fileObjectPID = domsClient.createFileObject(
                         RADIO_TV_FILE_TEMPLATE_PID, fileInfo);
@@ -532,7 +533,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
     /**
      * Move <code>fileToMove</code> to the folder specified by
      * <code>destinationFolder</code>.
-     * 
+     *
      * @param fileToMove
      *            Path to the file to move to <code>destinationFolder</code>.
      * @param destinationFolder
@@ -540,16 +541,16 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      */
     private void moveFile(File fileToMove, File destinationFolder) {
         fileToMove.renameTo(new File(destinationFolder.getAbsolutePath()
-                + File.separator + fileToMove.getName()));
+                                     + File.separator + fileToMove.getName()));
     }
 
     private void writeFailedPIDs(File failedMetadataFile,
-            List<String> failedPIDs, File outputFolder)
+                                 List<String> failedPIDs, File outputFolder)
             throws FileNotFoundException {
 
         final File failedPIDsFile = new File(outputFolder, failedMetadataFile
                 .getName()
-                + ".failedPIDs");
+                                                           + ".failedPIDs");
         final PrintStream printStream = new PrintStream(failedPIDsFile);
 
         final Iterator<String> pidIterator = failedPIDs.iterator();
@@ -575,7 +576,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
 
     /**
      * The number of tires is counted up.
-     * 
+     *
      * @param incrementBy
      *            a number of tries
      */
